# grpc-demo

./: CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  demo.cpp  satellite.proto
proto/: vehicle.proto
src/: vehicle_controller.cpp  vehicle_controller.h
tests/: test_vehicle_controller.cpp
